# class_animal

./: CMakeLists.txt  README.md
include/: animal.h
src/: animal.cpp  main.cpp
